syntax="proto3";

service PCSGrpcService {
	rpc LaunchServer (LaunchServerRequest) returns (LaunchServerReply);
	rpc LaunchClient (LaunchClientRequest) returns (LaunchClientReply);
}

message LaunchServerRequest {
	string host = 1;
	int32 port = 2;
}

message LaunchServerReply {
	bool ok = 1;
}

message LaunchClientRequest {
	string script_file = 1;
}

message LaunchClientReply {
	bool ok = 1;
}